Fix delayed damage updates (wip)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "DGRAM",
         "INADDR",
         "IPPROTO",
+        "multicaster",
         "multicasting",
         "multicasts",
         "REUSEADDR"
